force-app/main/default/objects/loan__Lookup__c/loan__Lookup__c.object-meta.xml
<CustomObject>
    <description>Lookup</description>
    <label>Lookup</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>