force-app/main/default/objects/loan__Lookup__c/fields/loan__Enabled_Flag__c.field-meta.xml
<CustomField>
    <fullName>loan__Enabled_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>