force-app/main/default/objects/loan__Lookup__c/fields/loan__Lookup_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Lookup_Code__c</fullName>
    <label>Lookup Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>