force-app/main/default/objects/loan__Lookup__c/fields/loan__Lookup_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Lookup_Sub_Type__c</fullName>
    <label>Lookup Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>